# LightHouse

./: .appveyor.yml  .bazelrc  .build-for-now.sh  .cz-config.js  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .npmignore  .travis.yml  AUTHORS  BUILD.bazel  CONTRIBUTING.md  WORKSPACE  base.json  be-test.js  budget.json  build-tracker.config.js  changelog.md  commit_sha  commitlint.config.js  default.profraw  demo.js  enable-crash-reporting.js  eslint-local-rules.cjs  esm-utils.js  esm-utils.mjs  evaluator_binary.js  jest.config.cjs  jest.config.js  jsconfig.json  lighthouse-plugin-simple  makerep.mjs  now.json  optimized_binary-bundle.js  optimized_binary.js  package-lock.json  package.json  (+14 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
_reports/: paulirish.devtools.html  paulirish.html
assets/: lh-ansii.txt
bazel/: Dockerfile  README.md  runner.js
cli/: bin.js  cli-flags.js  printer.js  run.js  sentry-prompt.js
clients/: .eslintrc.js  devtools-entry.js  devtools-report-assets.js  lightrider-entry.js  lightrider-smokehouse-collate.js  lightrider-smokehouse-report.js
core/: api.js  index.js  runner.js  scoring.js  user-flow.js  util-commonjs.js  util.cjs
docs/: architecture.md  authenticated-pages.md  bug-labels.md  configuration.md  error-reporting.md  hacking-tips.md  headless-chrome.md  lantern.md  new-audits.md  performance-budgets.md  performance-scoring.md  plugins.md  puppeteer.md  readme.md  releasing.md  report.md  running-at-scale.md  scoring.md  throttling.md  understanding-results.md  user-flows.md  v8-perf-faq.md  variability.md
flow-report/: .eslintrc.cjs  .eslintrc.js  App.tsx  jest.config.js  standalone-flow.tsx  tsconfig.json
lighthouse-ci/: .eslintrc  package.json  tsconfig.json
lighthouse-cli/: bin.js  bin.ts  cli-flags.js  cli-flags.ts  compiled-check.js  index.js  package.json  printer.js  printer.ts  run.js  run.ts  sentry-prompt.js  sentry-prompt.ts  shim-modules.ts
lighthouse-core/: audit-runner.js  index.js  runner.js  scoring.js  util-commonjs.js  util.cjs
lighthouse-extension/: build-extension.js  bundle-builder.js  gulpfile.js  package.json
lighthouse-logger/: index.js  package.json
lighthouse-treemap/: README.md  tsconfig.json
plots/: README.md  (+19 more)
(+3166 files in other folders)
